make-a-wish-salesforce/src/objects/cg__AttachmentSync__c.object
<CustomObject>
    <fields>
        <fullName>cg__AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__AttachmentObjectFileName__c</fullName>
        <label>AttachmentObjectFileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__AttachmentParentId__c</fullName>
        <label>AttachmentParentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__AttachmentParentObjectName__c</fullName>
        <label>AttachmentParentObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__AttachmentRelationshipName__c</fullName>
        <label>AttachmentRelationshipName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__FailedMessage__c</fullName>
        <label>FailedMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__FailedStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FailedStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                    <default>true</default>
                    <label>Attachment</label>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AttachmentSync</label>
    <listViews>
        <fullName>cg__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AttachmentSync Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AttachmentSyncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>